--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,69 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
+:root{
+
+  --color-primary: rgba(235, 81, 96,1);
+  --color-transparent: rgba(255,0,0,0);
+  --pic-width: 100px;
+  --pic-height: 90px;
+
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+*{
+    padding: 0rem;
+    margin: 0rem;
+    color: white;
+    font-family: 'Poppins', sans-serif;
+}
+
+h1,h2,h3,h4,h5{
+    font-weight: 500;
+}
+
+button{
+  background: rgba(255, 255, 255, 0);
+  font-size: medium;
+  border-radius: 3rem;
+  border-color: white;
+  border-style: solid;
+  padding: 0.5rem;
+}
+
+button:hover{
+  border-color: var(--color-primary);
+  cursor: pointer;
+}
+
+button:active{
+  background: var(--color-primary);
+}
+
+input{
+  background-color: var(--color-trans);
+  border: 1px solid white;
+}
+
+input:focus{
+  outline: none !important;
+  border:1px solid var(--color-primary);
+  box-shadow: 0 0 10px #719ECE;
+}
+
+html {
+    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+    background-size: 400% 400%;
+    animation: gradient 15s ease infinite;
+    min-height: 100vh;
+    position: relative;
+  }
+  
+  @keyframes gradient {
+    0% {
+      background-position: 0% 50%;
+    }
+    50% {
+      background-position: 100% 50%;
+    }
+    100% {
+      background-position: 0% 50%;
+    }
 }
